first commit to new branch

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         
     </header>
     <main>
+        <a href="cart">Shopping Cart</a>
         <section class="main-section">
             <ul id ="visors">
 
