style is comming along, no errors or weirds yet

--- a/cart/index.html
+++ b/cart/index.html
@@ -9,8 +9,9 @@
     <title>Your Cart</title>
 </head>
 <body>
-    Shopping Cart
-    <a href="../">Keep Shopping</a>
+    <div id="table-position">
+    <h1>Shopping Cart</h1>
+    
     <table>
         <thead>
             <th>Product</th>
@@ -34,7 +35,10 @@
                 <td id="order-total"></td>
             </tr>
         </tfoot>
+        
     </table>
+    <a href="../">Keep Shopping</a>
+</div>
     <script src="cart.js" type="module"></script>
 </body>
 </html>
