added smiley face

--- a/cart/index.html
+++ b/cart/index.html
@@ -38,7 +38,7 @@
         </tfoot>
         
     </table>
-    <a href="../">Keep Shopping</a>
+    <a href="../">&#128578; Keep Shopping  </a>
 </div>
     <script src="cart.js" type="module"></script>
 </body>
