throwing some errors on stuff that worked yesterday... find the bug!

--- a/cart/index.html
+++ b/cart/index.html
@@ -35,6 +35,11 @@
                 <td>Order Total:</td>
                 <td id="order-total"></td>
             </tr>
+            <tr>
+                <td colspan="4">
+                    <button id="clear">Clear Cart</button>
+                </td>
+            </tr>
         </tfoot>
         
     </table>
